<resources>
    <string name="app_name">Sportify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sign_in">Sign in</string>
    <string name="Sign_up">Sign up</string>
    <string name="Send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_started">Get started</string>
    <string name="email_hint">abc@email.com</string>
    <string name="entity_or_hint">Entity or player</string>
    <string name="gendre_hint">Your gendre</string>
    <string name="age_hint">Your age</string>
    <string name="full_name">Username</string>
    <string name="entity_name">Entity name</string>
    <string name="password_hint">Your password here</string>
    <string name="username_hint">Username</string>
    <string name="confirmed_password_hint">Confirm password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="google_login">Login with google</string>
    <string name="fb_login">Login with facebook</string>
    <string name="have_account">Don\'t Have An Account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="play_together">Let\'s play together</string>
    <string name="welcome_tagline">Hopping our way\ninto history</string>
    <string name="reset_password_description"><![CDATA[Please enter your email address to request a password reset]]></string>

    <string name="username_error">Please enter a username</string>
    <string name="password_error">Please enter a password</string>
    <string name="app_role_error">Please choose a role</string>
    <string name="password_error_regex">At least 5 characters</string>
    <string name="verification_password_not_match_error">Password is not matching</string>
    <string name="verification_password_error">Please enter confirm password</string>

    <string name="empty"> </string>
    <string name="something_goes_wrong">Something goes wrong</string>
    <string name="user_created_successfully">User created successfully</string>



</resources>