<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/textView"
        style="@style/title_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/title_authentification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Sign_in" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_outline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login_fragment"
                    style="@style/text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_outline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login_fragment"
                    style="@style/text_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget_password"
                style="@style/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forget_password" />

            <androidx.cardview.widget.CardView
                style="@style/card_main_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="22dp"
                app:cardElevation="16dp">

                <Button
                    android:id="@+id/main_button_login_fragment"
                    style="@style/main_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/Sign_in" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView4"
                style="@style/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/or" />

            <androidx.cardview.widget.CardView
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0.2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="8dp"
                        android:padding="16dp"
                        android:src="@drawable/google_icon" />

                    <TextView
                        style="@style/social_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google_login" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fb_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0.2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imageView21"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="8dp"
                        android:padding="16dp"
                        android:src="@drawable/fb_icon" />

                    <TextView
                        style="@style/social_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fb_login" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/have_account"
                    android:textColor="@color/secondary_color" />

                <TextView
                    android:id="@+id/sign_up_text"
                    style="@style/have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_up" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>