<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".ui.resetPassword.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView3"
            style="@style/title_authentification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/reset_password" />


        <TextView
            style="@style/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/reset_password_description"
            android:textColor="@color/secondary_color" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_outline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reset_password_fragment"
                style="@style/text_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            style="@style/card_main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <Button
                android:id="@+id/main_button_reset_password_fragment"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Send" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>